fix sonar bug and refactor